--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -899,14 +899,33 @@ h4 {
   margin-bottom: 4rem;
   margin-top: 2rem;
 }
+.often-questions .accordion-heading.active+.accordion-block {
+  display: block;
+}
+
 .often-questions .accordion-heading span {
   border-bottom: 2px dotted #333;
 }
+.active-style{
+  color: #a12ab1;
+}
 .often-questions .accordion-block {
-  margin-top: 1rem;
   background-color: #f7e7e6;
+  max-height: 0;
+  opacity: 0;
+  transition: all .3s ease-out;
+  overflow: hidden;
+  /*display: none;*/
+  /*margin-top: 1rem;*/
+  /*padding: 3rem 4rem;*/
+}
+.often-questions .accordion-block.active-content {
+  opacity: 1;
+  overflow: visible;
+  margin-top: 1rem;
   padding: 3rem 4rem;
 }
+
 .often-questions .accordion-block:before {
   content: '';
   position: absolute;
